--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model MIST143_Traveler.Models.TravelProduct
+
 @{
     ViewData["Title"] = "PayCheckout";
 }
@@ -6,7 +7,10 @@
 @section Styles{
     <link rel="stylesheet" href="~/css/travelOrder.css" />
 }
-<body>
+@{ 
+    string TotalPrice;
+    TotalPrice = (Model.Price * 1).ToString("###,###,##0");
+}
     <!-- 從這邊開始複製header跟nav，上面引用的css位置注意一下-->
     <nav>
         <div class="secondary-nav payTimeLine">
@@ -67,7 +71,7 @@
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
                                                id="creditCardRadio">
-                                        <label class="form-check-label" for="creditCardRadio" >
+                                        <label class="form-check-label" for="creditCardRadio">
                                             信用卡
                                         </label>
                                     </div>
@@ -131,7 +135,7 @@
                             <div class="payInfoRow checkout  p-3">
                                 <div class="left">點擊「確認付款方式」即表示確認訂單與右方總金額無誤，且同意<a>平台服務條款</a>、<a>退改政策</a></div>
                                 <div class="right">
-                                    <div class="mainTitle">NT$ 300</div>
+                                    <div class="mainTitle">NT$ @TotalPrice</div>
                                     <button type="button" class="btn btn-main" data-bs-toggle="modal" data-bs-target="#joinModal">確認付款</button>
                                 </div>
                             </div>
@@ -139,13 +143,13 @@
                     </div>
                     <div class="col-4 ">
                         <div class="rightSide ">
-                            <div class="titleFontStyle">【領券現折100】Klook獨家優惠｜台北101觀景台門票｜萬聖節搗蛋派對｜高空Sky Lounge百萬夜景</div>
-                            <div class="subtext">【台北101觀景台】最High夜景-搗蛋派對星光票</div>
+                            <div class="titleFontStyle">@Model.TravelProductName</div>
+                            <div class="subtext">@Model.EventIntroduction</div>
                             <div class="border-bottom-line"></div>
-                            <div class="infoRow">
+                            @*<div class="infoRow">
                                 <div class="subInfoText">日期</div>
                                 <div>2022年10月11日 10:00 上午</div>
-                            </div>
+                            </div>*@
                             <div class="infoRow">
                                 <div class="subInfoText">數量</div>
                                 <div>1 x 成人</div>
@@ -153,7 +157,7 @@
                             <div class="border-bottom-line"></div>
                             <div class="infoRow">
                                 <div class="subInfoText">總價</div>
-                                <div class="titleFontStyle">NT$ 300</div>
+                                <div class="titleFontStyle">NT$ @TotalPrice</div>
                             </div>
                         </div>
                     </div>
@@ -185,8 +189,7 @@
     @section Scripts{
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="~/js/travelOrder.js"></script>
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     }
-
-</body>
 
 
