--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -1,4 +1,4 @@
-﻿@addTagHelper *, MIST143_Traveler
+﻿@*@addTagHelper *, MIST143_Traveler*@
 @model List<MIST143_Traveler.Models.TravelProduct>
 @section Styles{
     <link href="@Url.Content("~/css/ProductListPage2.css")" rel="stylesheet" />
