--- a/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
@@ -26,10 +26,11 @@
                             @*<header>EMAIL帳號</header>*@
                             <label asp-for="Email" class="control-label"></label>
                             <input class="form-control" type="email" asp-for="Email" placeholder="123" aria-label="default input example" name="Email" id="Email" required>
-                            <small id="sm" class="form-text text-muted"></small>
+                            <div><small id="sm" class="form-text text-muted"></small></div>
                         </div>
-                    </div>
 
+                    </div>
+                    
                     <div class="box_body d-flex  mb-2">
                         <div class="inputs p-2 flex-fill">
                             <label asp-for="MemberName" class="control-label"></label>
@@ -65,14 +66,14 @@
                         </div>
 
                         @*<div class="inputs p-2 ">
-                                <header>居住區域</header>
-                                <select class="form-select" aria-label="Default select example">
-                                    <option selected>大安區</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
-                                </select>
-                            </div>*@
+                <header>居住區域</header>
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>大安區</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>*@
 
                         <div class="inputs p-2 flex-grow-1">
                             <header>地址</header>
@@ -106,9 +107,9 @@
 
 
                     <div class="modal-footer">
-
+                        
                         <button type="button" class="btn btn-success" id="sb1" onclick="BtnDemo()">Demo</button>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >關閉</button>
                         <input type="submit" class="btn btn-primary ccc">
                     </div>
 
@@ -122,52 +123,57 @@
 </form>
 @section Scripts{ 
     <script>
-    
-
+       
     </script>
 }
 <script>
     //DEMO
+     function BtnDemo() {
 
-    function BtnDemo() {
+            $('#Name').val("恆佑")
+            $('#Email').val("ask@yahoo.com.tw")
+            $('#Phone').val("0966666666")
+            $('#Password1').val("a77777777")
+            $('#Password2').val("a77777777")
 
-        $('#Name').val("恆佑")
-        $('#Email').val("ask@yahoo.com.tw")
-        $('#Phone').val("0966666666")
-        $('#Password1').val("a77777777")
-        $('#Password2').val("a77777777")
+            $('#address').val("和平東路二段106號11樓")
+        }
 
-        $('#address').val("和平東路二段106號11樓")
-    }
+
+
+
     //const Btncre = () => {
     //    alert("註冊成功")
     //}
-    var Postdata = {
-        Email=$("#Email").val(),
-        MemberName=$("#MemberName").val(),
-        Phone=$("#Phone").val(),
-        Email=$("#Email").val(),
-        Address=$("#Address").val(),
-        BirthDay=$("#BirthDay").val(),
-        Gender=$("#Gender").val()
-    }
+    //var Postdata = {
+    //    Email=$("#Email").val(),
+    //    MemberName=$("#MemberName").val(),
+    //    Phone=$("#Phone").val(),
+    //    Email=$("#Email").val(),
+    //    Address=$("#Address").val(),
+    //    BirthDay=$("#BirthDay").val(),
+    //    Gender=$("#Gender").val()
+    //}
     @*$.ajax({
         url: '@Url.Action("Createmember", "CustomerCenter")',
 
     })*@
      //抓資料庫城市資料
+  
     const selCity = document.querySelector("#selectC")
     async function LoadCities() {
+        /*  selCity.options.length = 0;*/
+        
     let response = await fetch("@Url.Content("~/CustomerCenter/city")")
     let datas = await response.json()
     datas.forEach(city => {
-    const opt = new Option(city, city)
+    const opt = new Option(city)
     selCity.options.add(opt)
     })
     }
     LoadCities()
     //判斷密碼是否一致
-    //let emsm=document.querySelector("#sm")
+    let emsm=document.querySelector("#sm")
     //let smps = document.querySelector("#checkps")
     //let ps1=document.querySelector("#password1")
     //let ps2 = document.querySelector("#password2")
