--- a/MIST143_Traveler/Views/Shopping/PayData.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayData.cshtml
@@ -125,7 +125,7 @@
                         <div class="payInfoRow p-3">
                             <div>點擊「前往付款」，訂單即送出，請於下一步選擇付款方式</div>
                             <button type="button" class="btn btn-main">
-                                <a class="buttonInnderA" href="../Shopping/PayCheckout">前往付款</a>
+                                <a class="buttonInnderA" href="@Url.Action("PayCheckout" ,"shopping", new { Model.TravelProductId })">前往付款</a>
                             </button>
                         </div>
                     </div>
