--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -256,7 +256,7 @@
                     </div>
                 </div>
             </div>
-            <div class="search-result-activity-container">
+            <div class="search-result-activity-containe asd">
                 @for (int i = 0; i < 8; i++)
                 {
                     @await Component.InvokeAsync("Productlistpagi", new { tr = Model[i] })
