--- a/MIST143_Traveler/Views/Shared/Components/Productlistpagi/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/Productlistpagi/Default.cshtml
@@ -8,7 +8,7 @@
 @{
     <div class="experience-activity-card-section j-experience-activity-card-section desktop">
 
-        <div class="asdqwr">
+        <div class="asdqwr asd">
             <div class="card" style="">
                 <img class="card-img-top" src="../Images/ProductListPageImages/landscape_101.jpg" alt="Card image cap">
                 <div class="card-body">
