--- a/MIST143_Traveler/wwwroot/css/ProductListPage2.css
+++ b/MIST143_Traveler/wwwroot/css/ProductListPage2.css
@@ -211,6 +211,10 @@
     margin: auto;
     padding: 40px;
 }
+.asd {
+    display: flex;
+    margin: -15px;
+}
 .card {
     margin: 0 auto;
     width: 210px;
@@ -735,6 +739,11 @@ a {
 .frmcheckin {
     vertical-align: auto;
 }
-.search-result-activity-container {
+.search-result-activity-containe {
     width: 100%;
+    height: 1200px;
+    overflow-wrap: break-word;
+    flex-wrap: wrap;
+    padding: 30px;
 }
+
